--- a/public/css/frontend/books/show.css
+++ b/public/css/frontend/books/show.css
@@ -49,6 +49,7 @@
 }
 
 .detail-page-body {
+  min-width: 300px;
   background-color: #eaeaea;
   padding: 0px 0px 60px 0px;
 }
@@ -131,10 +132,174 @@
   display: inline-block;
 }
 
+@media (max-width: 767px) {
+  .rwd-container {
+    max-width: 650px !important;
+  }
+}
+
+.paper-rwd-detail-container {
+  height: 650px;
+  font-size: 1.2rem;
+  color: #55473f;
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container {
+    height: 800px;
+  }
+}
+@media (max-width: 575px) {
+  .paper-rwd-detail-container {
+    height: 700px;
+  }
+}
+@media (max-width: 500px) {
+  .paper-rwd-detail-container {
+    height: 600px;
+  }
+}
+.paper-rwd-detail-container .book-detail-row {
+  width: 100%;
+  padding: 50px;
+  height: 100%;
+  margin: 0;
+  background-image: url(../../../images/frontend/icons/book_bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+@media (max-width: 991px) {
+  .paper-rwd-detail-container .book-detail-row {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 575px) {
+  .paper-rwd-detail-container .book-detail-row {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  .paper-rwd-detail-container .book-detail-row {
+    padding: 65px 0px;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-left {
+  padding: 20px 60px 25px 40px;
+  text-align: center;
+}
+@media (max-width: 991px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-left {
+    padding: 70px 0px;
+  }
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-left {
+    padding: 20px 60px 0px 60px;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-left .row {
+  margin-top: 15px;
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-left .book-detail-img img {
+  width: 80%;
+  margin-bottom: 10px;
+  box-shadow: 2px 5px 15px 2px rgba(0, 0, 0, 0.5);
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-left .book-detail-img img {
+    width: 75%;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right {
+  padding: 20px;
+}
+@media (max-width: 991px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right {
+    max-width: 100% !important;
+    padding: 35px 20px;
+  }
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right {
+    padding: 0px 20px;
+  }
+}
+@media (max-width: 991px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .row {
+    width: 100%;
+    margin: 0;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right .paper-row-col {
+  padding: 20px 0px;
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .paper-row-col {
+    padding: 0px;
+    text-align: center;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right .paper-row-col p {
+  display: inline;
+  word-break: break-word;
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right .paper-row-col .book-rows {
+  margin: 30px 20px;
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .paper-row-col .book-rows {
+    margin: 0px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 991x) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col {
+    padding: 0;
+  }
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col {
+    text-align: center;
+  }
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col p {
+  display: inline;
+  word-break: break-word;
+}
+.paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
+  margin: 23px 20px;
+}
+@media (max-width: 991px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .paper-rwd-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
+    margin: 9px 40px;
+  }
+}
+
 .book-detail-container {
   height: 650px;
   font-size: 1.2rem;
   color: #55473f;
+}
+@media (max-width: 767px) {
+  .book-detail-container {
+    height: 960px;
+  }
+}
+@media (max-width: 575px) {
+  .book-detail-container {
+    height: 800px;
+  }
+}
+@media (max-width: 500px) {
+  .book-detail-container {
+    height: 700px;
+  }
 }
 .book-detail-container .book-detail-row {
   width: 100%;
@@ -145,9 +310,34 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
+@media (max-width: 991px) {
+  .book-detail-container .book-detail-row {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 575px) {
+  .book-detail-container .book-detail-row {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  .book-detail-container .book-detail-row {
+    padding: 65px 0px;
+  }
+}
 .book-detail-container .book-detail-row .book-detail-row-left {
   padding: 20px 60px 25px 40px;
   text-align: center;
+}
+@media (max-width: 991px) {
+  .book-detail-container .book-detail-row .book-detail-row-left {
+    padding: 70px 0px;
+  }
+}
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-left {
+    padding: 20px 60px 0px 60px;
+  }
 }
 .book-detail-container .book-detail-row .book-detail-row-left .row {
   margin-top: 15px;
@@ -157,11 +347,39 @@
   margin-bottom: 10px;
   box-shadow: 2px 5px 15px 2px rgba(0, 0, 0, 0.5);
 }
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-left .book-detail-img img {
+    width: 75%;
+  }
+}
 .book-detail-container .book-detail-row .book-detail-row-right {
   padding: 20px;
 }
+@media (max-width: 991px) {
+  .book-detail-container .book-detail-row .book-detail-row-right {
+    max-width: 100% !important;
+    padding: 35px 20px;
+  }
+}
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-right {
+    padding: 0px 20px;
+  }
+}
+@media (max-width: 991px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .row {
+    width: 100%;
+    margin: 0;
+  }
+}
 .book-detail-container .book-detail-row .book-detail-row-right .paper-row-col {
   padding: 20px 0px;
+}
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .paper-row-col {
+    padding: 0px;
+    text-align: center;
+  }
 }
 .book-detail-container .book-detail-row .book-detail-row-right .paper-row-col p {
   display: inline;
@@ -170,10 +388,38 @@
 .book-detail-container .book-detail-row .book-detail-row-right .paper-row-col .book-rows {
   margin: 30px 20px;
 }
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .paper-row-col .book-rows {
+    margin: 0px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 991x) {
+  .book-detail-container .book-detail-row .book-detail-row-right .book-row-col {
+    padding: 0;
+  }
+}
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .book-row-col {
+    text-align: center;
+  }
+}
 .book-detail-container .book-detail-row .book-detail-row-right .book-row-col p {
   display: inline;
   word-break: break-word;
 }
 .book-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
   margin: 23px 20px;
+}
+@media (max-width: 991px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .book-detail-container .book-detail-row .book-detail-row-right .book-row-col .book-rows {
+    margin: 9px 0px;
+  }
 }
