--- a/resources/sass/frontend/announcements/show.scss
+++ b/resources/sass/frontend/announcements/show.scss
@@ -1,6 +1,7 @@
     @import "../variables";
     @import "../contents";
     .announcement-detail {
+        min-width: $web-min-width;
         width: 100%;
         height: 1000px;
         background-color: $gray;
@@ -10,6 +11,9 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
             position: relative;
+            @media (max-width: 991px) {
+                margin: 0;
+            }
             header {
                 height: 35%;
                 .announcement-detail-title {
@@ -23,18 +27,88 @@
                         width: 100%;
                         top: 230px;
                         left: 235px;
-                        h1 {
-                            color: $brown;
-                            font-size: 2.2rem;
-                            letter-spacing: 10px;
-                            display: inline-block;
-                            font-weight: bold;
+                        @media (max-width: 991px) {
+                            top: 250px;
+                            left: 165px;
+                            width: 80%;
+                        }
+                        @media (max-width: 767px) {
+                            top: 228px;
+                            left: 115px;
+                            width: 100%;
+                        }
+                        @media (max-width: 575px) {
+                            left: 90px;
+                            top: 238px;
+                        }
+                        @media (max-width: 450px) {
+                            left: 75px;
+                        }
+                        @media (max-width: 350px) {
+                            left: 60px;
+                        }
+                        @media (max-width: 300px) {
+                            top: 255px;
+                        }
+                        .announcement-detail-title-content {
+                            text-align: left;
+                            float: left;
+                            margin: 0;
+                            @media (max-width: 991px) {
+                                width: 60%;
+                            }
+                            h1 {
+                                color: $brown;
+                                font-size: 2.2rem;
+                                letter-spacing: 10px;
+                                display: inline-block;
+                                font-weight: bold;
+                                @media (max-width: 991px) {
+                                    font-size: 1.6rem;
+                                }
+                                @media (max-width: 767px) {
+                                    font-size: 1.5rem;
+                                    letter-spacing: 5px;
+                                }
+                                @media (max-width: 575px) {
+                                    font-size: 1.1rem;
+                                }
+                                @media (max-width: 450px) {
+                                    font-size: 1rem;
+                                }
+                                @media (max-width: 300px) {
+                                    font-size: 0.8rem;
+                                }
+                            }
+                            @media (max-width: 767px) {
+                                width: 45%;
+                            }
                         }
                         .announcement-detail-date {
                             position: absolute;
                             right: 430px;
                             bottom: 3px;
                             margin: 0;
+                            @media (max-width: 991px) {
+                                right: 90px;
+                            }
+                            @media (max-width: 767px) {
+                                right: 215px;
+                                bottom: 15px;
+                                width: 20%;
+                            }
+                            @media (max-width: 575px) {
+                                right: 175px;
+                                bottom: 8px;
+                                width: 20%;
+                            }
+                            @media (max-width: 450px) {
+                                right: 140px;
+                            }
+                            @media (max-width: 450px) {
+                                width: 22%;
+                                right: 110px;
+                            }
                             // margin-bottom: 28px;
                             h2 {
                                 margin: 0;
@@ -48,6 +122,19 @@
                                 @media (max-width: 800px) {
                                     margin-left: 0px;
                                 }
+                                @media (max-width: 767px) {
+                                    margin: 0;
+                                    font-size: 2.5rem;
+                                }
+                                @media (max-width: 575px) {
+                                    font-size: 2rem;
+                                }
+                                @media (max-width: 450px) {
+                                    font-size: 1.5rem;
+                                }
+                                @media (max-width: 300px) {
+                                    font-size: 1.3rem;
+                                }
                             }
                             span {
                                 letter-spacing: 2px;
@@ -57,12 +144,20 @@
                                 right: 5px;
                                 top: 3px;
                                 margin-right: 10px;
+                                @media (max-width: 767px) {
+                                    margin: 0;
+                                    top: 0;
+                                }
+                                @media (max-width: 575px) {
+                                    font-size: 0.8rem;
+                                }
+                                @media (max-width: 450px) {
+                                    font-size: 0.6rem;
+                                }
+                                @media (max-width: 300px) {
+                                    font-size: 0.5rem;
+                                }
                             }
-                        }
-                        .announcement-detail-title-content {
-                            text-align: left;
-                            float: left;
-                            margin: 0;
                         }
                     }
                 }
@@ -73,19 +168,22 @@
                 width: 880px;
                 margin-left: auto;
                 margin-right: auto;
+                @media (max-width: 991px) {
+                    width: 60%;
+                }
                 .announcement-detail-row {
                     width: 100%;
                 }
             }
         }
     }
-    
+
     .detail-page-body {
         .goback-container {
             margin-top: 0;
         }
     }
-    
+
     // .announcement-detail-row {
     //     width: 100%;
     //     padding: 20px;
