--- a/public/css/frontend/books/show.css
+++ b/public/css/frontend/books/show.css
@@ -10,6 +10,11 @@
   letter-spacing: 15px;
   display: inline-block;
 }
+@media (max-width: 767px) {
+  .content-page-header h1 {
+    font-size: 1.8rem;
+  }
+}
 @media (max-width: 379px) {
   .content-page-header h1 {
     font-size: 1.5rem;
