--- a/public/css/frontend/donors/show.css
+++ b/public/css/frontend/donors/show.css
@@ -10,6 +10,11 @@
   letter-spacing: 15px;
   display: inline-block;
 }
+@media (max-width: 767px) {
+  .content-page-header h1 {
+    font-size: 1.8rem;
+  }
+}
 @media (max-width: 379px) {
   .content-page-header h1 {
     font-size: 1.5rem;
@@ -143,11 +148,17 @@
 }
 
 .content-page-body {
+  min-width: 768px !important;
   height: 1200px;
   padding: 0px 0px 60px 0px;
 }
 .content-page-body .container {
   height: 100%;
+}
+@media (max-width: 767px) {
+  .content-page-body .container {
+    max-width: initial;
+  }
 }
 .content-page-body .container .donor-show-container {
   height: 90%;
@@ -160,13 +171,33 @@
 .content-page-body .container .donor-show-container .title-rows {
   font-size: 1.3rem;
   font-weight: bold;
-  margin-bottom: 35px;
+  margin-bottom: 55px;
+}
+.content-page-body .container .donor-show-container .title-status-rows {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 55px;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .title-status-rows {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .title-status-rows .status-col-title {
+    padding: 0;
+  }
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .title-status-rows .status-col-status {
+    padding: 0;
+  }
 }
 .content-page-body .container .donor-show-container .book-row {
   background-color: rgba(255, 255, 255, 0.7);
   width: 100%;
   font-size: 1.2rem;
-  margin-bottom: 35px;
+  margin-bottom: 55px;
 }
 .content-page-body .container .donor-show-container .book-row a {
   display: block;
@@ -175,6 +206,11 @@
 .content-page-body .container .donor-show-container .book-row .book-info-container {
   width: 90%;
   display: inline-block;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-container {
+    font-size: 1rem;
+  }
 }
 .content-page-body .container .donor-show-container .book-row .book-info-container .book-index {
   display: inline-block;
@@ -192,6 +228,11 @@
   letter-spacing: 5px;
   width: 55%;
 }
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-container .book-title {
+    margin-left: 15px;
+  }
+}
 .content-page-body .container .donor-show-container .book-row .book-info-container .book-title-status {
   display: inline-block;
   letter-spacing: 5px;
@@ -202,6 +243,53 @@
   letter-spacing: 5px;
   font-size: 1rem;
   width: 18%;
+}
+.content-page-body .container .donor-show-container .book-row .book-info-status-container {
+  width: 90%;
+  display: inline-block;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-status-container {
+    font-size: 0.8rem;
+  }
+}
+.content-page-body .container .donor-show-container .book-row .book-info-status-container .book-index {
+  display: inline-block;
+  letter-spacing: 3px;
+  width: 15%;
+  padding: 0px 30px;
+}
+.content-page-body .container .donor-show-container .book-row .book-info-status-container .book-date {
+  display: inline-block;
+  letter-spacing: 3px;
+  width: 25%;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-status-container .book-date {
+    letter-spacing: 2px;
+  }
+}
+.content-page-body .container .donor-show-container .book-row .book-info-status-container .book-title-status {
+  display: inline-block;
+  letter-spacing: 5px;
+  width: 38%;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-status-container .book-title-status {
+    letter-spacing: 2px;
+  }
+}
+.content-page-body .container .donor-show-container .book-row .book-info-status-container .book-status {
+  display: inline-block;
+  letter-spacing: 5px;
+  font-size: 1rem;
+  width: 18%;
+}
+@media (max-width: 991px) {
+  .content-page-body .container .donor-show-container .book-row .book-info-status-container .book-status {
+    letter-spacing: 1px;
+    font-size: 0.7rem;
+  }
 }
 .content-page-body .container .donor-show-container .book-row .book-readmore {
   display: inline-block;
