--- a/resources/sass/frontend/_contents.scss
+++ b/resources/sass/frontend/_contents.scss
@@ -8,6 +8,9 @@
         font-size: 2.5rem;
         letter-spacing: 15px;
         display: inline-block;
+        @media (max-width: 767px) {
+            font-size: 1.8rem;
+        }
         @media (max-width: 379px) {
             font-size: 1.5rem;
         }
