--- a/resources/sass/frontend/donors/index.scss
+++ b/resources/sass/frontend/donors/index.scss
@@ -1,62 +1,82 @@
 @import "../variables";
 @import "../contents";
 @import "../filter";
-
-.filter-row{
+.filter-row {
     margin-bottom: 45px;
 }
 
-.donor-container{
+.content-page-body {
+    min-width: 768px !important;
+    .rwd-container {
+        @media (max-width: 991px) {
+            max-width: 800px !important;
+        }
+    }
+    .container {
+        @media (max-width: 767px) {
+            max-width: initial;
+        }
+    }
+}
+
+.donor-container {
     background-color: $white;
     border: 25px solid $green;
     padding: 60px 30px 30px;
-    .donor-table{
+    .donor-table {
         display: flex;
         flex-flow: column nowrap;
         width: 100%;
-        .donor-row{
+        .donor-row {
             display: flex;
             flex-flow: row nowrap;
             justify-content: left;
             align-items: stretch;
             height: 3.5rem;
             border-bottom: 2px solid $green;
-            &:not(:last-child){
+            &:not(:last-child) {
                 margin-bottom: 35px;
             }
-            .donor-col{
+            .donor-col {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 flex-shrink: 0;
-
                 color: $brown;
                 letter-spacing: 3px;
-                .donor-link{
+                .donor-link {
                     color: $brown;
                 }
-                &.th{
+                &.th {
                     font-weight: bold;
                     font-size: 1.3rem;
+                    @media (max-width: 991px) {
+                        font-size: 0.9rem;
+                    }
                 }
-                &.td{
+                &.td {
                     font-size: 1.2rem;
+                    @media (max-width: 991px) {
+                        font-size: 0.8rem;
+                    }
                 }
             }
-            
-            .w-10{
+            .w-10 {
                 width: 10%;
             }
-            .w-18{
+            .w-18 {
                 width: 18%;
             }
-            .w-20{
+            .w-20 {
                 width: 20%;
             }
-            .w-30{
+            .w-30 {
                 width: 30%;
+                @media (max-width: 991px) {
+                    width: 35%;
+                }
             }
-            .w-adj{
+            .w-adj {
                 flex-grow: 1;
             }
         }
