--- a/resources/sass/frontend/donors/show.scss
+++ b/resources/sass/frontend/donors/show.scss
@@ -6,10 +6,14 @@
 }
 
 .content-page-body {
+    min-width: 768px !important;
     height: 1200px;
     padding: 0px 0px 60px 0px;
     .container {
         height: 100%;
+        @media (max-width: 767px) {
+            max-width: initial;
+        }
         .donor-show-container {
             height: 90%;
             background-image: url('../../../images/frontend/icons/donated_book_bg.png');
@@ -20,20 +24,42 @@
             .title-rows {
                 font-size: 1.3rem;
                 font-weight: bold;
-                margin-bottom: 35px;
+                margin-bottom: 55px;
+            }
+            .title-status-rows {
+                font-size: 1.3rem;
+                font-weight: bold;
+                margin-bottom: 55px;
+                @media (max-width: 991px) {
+                    font-size: 1.1rem;
+                }
+                .status-col-title {
+                    @media (max-width: 991px) {
+                        padding: 0;
+                    }
+                }
+                .status-col-status {
+                    @media (max-width: 991px) {
+                        padding: 0;
+                    }
+                }
             }
             .book-row {
                 background-color: rgba(255, 255, 255, 0.7);
                 width: 100%;
                 font-size: 1.2rem;
-                margin-bottom: 35px;
+                margin-bottom: 55px;
                 a {
                     display: block;
                     width: 100%;
                 }
+                // 無狀態
                 .book-info-container {
                     width: 90%;
                     display: inline-block;
+                    @media (max-width: 991px) {
+                        font-size: 1rem;
+                    }
                     .book-index {
                         display: inline-block;
                         letter-spacing: 3px;
@@ -49,6 +75,9 @@
                         display: inline-block;
                         letter-spacing: 5px;
                         width: 55%;
+                        @media (max-width: 991px) {
+                            margin-left: 15px;
+                        }
                     }
                     .book-title-status {
                         display: inline-block;
@@ -60,6 +89,46 @@
                         letter-spacing: 5px;
                         font-size: 1rem;
                         width: 18%;
+                    }
+                }
+                // 有狀態的
+                .book-info-status-container {
+                    width: 90%;
+                    display: inline-block;
+                    @media (max-width: 991px) {
+                        font-size: 0.8rem;
+                    }
+                    .book-index {
+                        display: inline-block;
+                        letter-spacing: 3px;
+                        width: 15%;
+                        padding: 0px 30px;
+                    }
+                    .book-date {
+                        display: inline-block;
+                        letter-spacing: 3px;
+                        width: 25%;
+                        @media (max-width: 991px) {
+                            letter-spacing: 2px;
+                        }
+                    }
+                    .book-title-status {
+                        display: inline-block;
+                        letter-spacing: 5px;
+                        width: 38%;
+                        @media (max-width: 991px) {
+                            letter-spacing: 2px;
+                        }
+                    }
+                    .book-status {
+                        display: inline-block;
+                        letter-spacing: 5px;
+                        font-size: 1rem;
+                        width: 18%;
+                        @media (max-width: 991px) {
+                            letter-spacing: 1px;
+                            font-size: 0.7rem;
+                        }
                     }
                 }
                 .book-readmore {
